css/theme.css
/* ... */
.theme-help-box-description {overflow: hidden; }

/* ----------------------- */
/* Anchors and buttons     */
/* ----------------------- */

.btn {
  -webkit-box-shadow: none !important;
  -moz-box-shadow: none !important;
  box-shadow: none !important;
  font-family: 'Arial' !important;
}
.btn .caret {
	margin-left: 5px;
}
.btn-xs {
  font-size: 11px;
}
.btn-secondary {
  background-color: #efefef;
  border-color: #efefef;
  color: #333333;
}
.btn-secondary:hover {
  background-color: #ebebeb;
  border-color: #ebebeb;
}
.dropdown-menu-right {
  right: 0;
  left: auto;
}
.dropdown-menu >li > a {
  font-size: 12px;
}
.dropdown-menu >li > a .fa{margin-right: 3px;}

.theme-icon-text-spacing {
  padding-right: 5px;
}
.theme-text-icon-spacing {
  padding-left: 5px;
}

/* ----------------------- */
/* Fields                  */
/* ----------------------- */

.form-control {
  height: auto;
  min-height: 34px;
}
.form-control.theme-sidebar-search:focus {
  border-color: #fafafa !important;
}
.theme-field-right input[type=checkbox] {
  width: 34px;
  height: 24px;
}
.theme-errmsg-separator {
  margin: 20px 20px 0px 20px;
}
.theme-validation-error {
  color: red;
  font-size: 11px;
}

span.form-control { background: #eee; box-shadow: none; cursor: not-allowed;}


/* ----------------------- */
/* Radio buttons and sets  */
/* ----------------------- */

.theme-radioset input {
  width: 30px;
  float: left;
}
.theme-radioset label {
  padding-left: 10px;
}
.theme-radioset p {
  margin-left: 40px;
}
.theme-field-radio-set div {
  padding-top: 4px;
  padding-bottom: 4px;
}
.theme-field-radio-set input[type=radio] {
  margin-right: 6px;
}

/* ----------------------- */
/* Progress bars           */
/* ----------------------- */

.progress {
}

/* ----------------------- */
/* Login form              */
/* ----------------------- */

.theme-login-container {
  width: 80%;
  margin-left: auto;
  margin-right: auto;
  position: relative;
  padding-top: 10%;
}

/* ----------------------- */
/* Sidebar widget FIXME - discuss */
/* ----------------------- */

/* ----------------------- */
/* Charts                  */
/* ----------------------- */

.theme-chart-container {
  width: 100%;
  height: 100px;
}
.theme-chart-xs {
  height: 50px;
}
.theme-chart-small {
  height: 100px;
}
.theme-chart-medium {
  height: 200px;
}
.theme-chart-large {
  height: 350px;
}

/* ----------------------- */
/* Daemons                 */
/* ----------------------- */

.theme-stopped-daemon, .theme-dead-daemon{
  color: red;
}
.theme-daemon-start-stop-status {
  margin-right: 5px;
}

/* ----------------------- */
/* Breadcrumb              */
/* ----------------------- */

.theme-breadcrumb {
  float: left;
}
.theme-breadcrumb-links {
  float: right;
  font-size: 1.7em;
  padding-right: 15px;
}
.theme-breadcrumb-links a {
  color: #ffffff;
  display: inline-block;
  font-size: 30px;
  padding: 6px 0px 0;
  margin-left: 10px;
}

/* ----------------------- */
/* Tables                  */
/* ----------------------- */

.theme-box-tools {
  margin-top: -15px;
}

/* ----------------------- */
/* Tabs                    */
/* ----------------------- */

/* ----------------------- */
/* Boxes (bootstrap-like)  */
/* ----------------------- */

.box-footer {
  margin-top: 10px;
}

/* ----------------------- */
/* Infoboxes               */
/* ----------------------- */

.theme-infobox {
  margin: 10px 30px;
  position: relative;
}
.theme-infobox-icon {
  padding-right: 15px;
  font-size: 1.5em;
  width: 30px;
  float: left;
}
.theme-infobox-title {
  margin-bottom: 10px;
  margin-top: 5px;
  font-weight: bold;
  text-align: left;
}
.theme-infobox-content {
  text-align: left;
  clear: both;
}
.theme-infobox-anchor {
  padding-top: 15px;
  text-align: center;
}
.theme-infobox-buttons {
  text-align: center;
  margin-top: 10px;
}

/* ----------------------- */
/* Dialogboxes             */
/* ----------------------- */

.theme-modal-info {
  float: left;
  width: 60px;
  font-size: 3em;
  margin-top: -8px;
  color: #333;
}
.theme-modal-info.info {
  color: #3c8dbc;
}
.theme-modal-info.warning {
  color: #F90;
}

/* ----------------------- */
/* Wizard                  */
/* ----------------------- */

.theme-wizard-intro-title {
  font-weight: bold;
  padding-bottom: 10px;
}
.theme-wizard-intro-description {
  font-size: 13px;
  margin-left: 100px;
}
.theme-wizard-intro-icon {
  display: block;
  margin: auto;
}
.theme-wizard-intro-icon-container {
  float: left;
  height: 80px;
  width: 80px;
}
a#wizard_nav_next, a#wizard_nav_previous {
  font-size: 14px;
  padding: 6px;
}
a#wizard_nav_next:hover {
  -ms-filter:'progid:DXImageTransform.Microsoft.Alpha(Opacity=90)';
  filter:alpha(Opacity=90);
  -moz-opacity: 0.9;
  opacity: 0.9;
}
a#wizard_nav_previous:hover, a#wizard_nav_previous:focus {
 color: #c7c7c7;
}
.wizard-progress {
  padding-top:20px;
  padding-left: 20px;
  list-style-type: none;
}
.wizard-progress ul.treeview-menu {
  padding-left: 30px;
  list-style-type: none;
}
.wizard-progress li.treeview a span {
  padding-left: 5px;
}

/* ----------------------- */
/* Top navigation bar      */
/* ----------------------- */

.theme-top-navbar {
  float: left;
  width: 80%;
  height: 50px;
}
.theme-top-navbar div {
  float: left;
  width: 33%;
  text-align: center;
  padding-top: 15px;
  height: 50px;
  text-transform: uppercase;
}
.theme-top-navbar a, .theme-top-navbar a:visited {
  color: #ffffff;
}
.theme-top-navbar div:hover {
  background-color: #357ca5;
}
/* ----------------------- */
/* App Support             */
/* ----------------------- */
.theme-support-type {
  display: inline;
}
.theme-support {
  padding-right: 1px;
}
.theme-support-0 {
  color: #dddddd;
}
.theme-support-1 {
  color: #ffff66; 
}
.theme-support-2 {
  color: #98bb60; 
}
.theme-support-4 {
  color: #008080;
}
.theme-support-8 {
  color: #e1852e;
}
.theme-support-16 {
  color: #000000;
}
#theme_app_sidebar div.row {
  line-height: 2.2;
}
/* ... */

